# SpecSage-AABW

./: .gitignore  AGENTS.md  Data.md  README.md  SPEC.md  package.json  pnpm-lock.yaml  techstack.md  tools.md  vercel.json
services/agent-api/: main.py  pyproject.toml
services/agent-api/benchmarks/: gaming_benchmark_matrix.json
services/agent-api/catalog/: catalog_snapshot.json  catalog_sources.json  sku_specs_overrides.json
services/agent-api/fixtures/: phongvu-category-case-2026-06-28.html  phongvu-category-components.html  phongvu-category-cooler-2026-06-28.html  phongvu-category-cpu-2026-06-28.html  phongvu-category-mainboard-2026-06-28.html  phongvu-category-monitor-2026-06-28.html  phongvu-category-psu-2026-06-28.html  phongvu-category-ram-2026-06-28.html  phongvu-category-storage-2026-06-28.html  phongvu-category-vga-2026-06-28.html
services/agent-api/rules/: compatibility_rules_v2026_06_27.json
services/agent-api/src/pc_build_copilot/: __init__.py  api.py  build_addons.py  build_alternatives.py  models.py  (+32 more)
services/agent-api/tests/: conftest.py  test_build_feedback.py  test_build_generation.py  test_build_iteration.py  test_build_orchestrator.py  test_catalog_api.py  test_catalog_ingestion.py  test_catalog_refresh.py  test_compatibility_api.py  test_compatibility_rules.py  test_demo_e2e_flow.py  test_evaluation_suite.py  test_intent_parser.py  test_llm_intent_advisor.py  test_performance_benchmarks.py  test_persistence_selection.py  test_postgres_catalog.py  test_sessions_api.py  test_sqlite_persistence.py  test_trace_replay.py  test_upgrade_planner.py
(+131 files in other folders)
