[project]
name = "pc-build-copilot-agent-api"
version = "0.1.0"
description = "FastAPI session and intent foundation for PC Build Copilot."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.128.0",
  "langgraph>=1.0.0,<2.0.0",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.12.0",
  "uvicorn[standard]>=0.32.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.28.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
